Tercera versin de la pagina

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <H1>EJEMPLO HTML 5</H1>
     <p>Esto es un ejemplo de una página web estática.</p>
+    <h2>Actualizar en GIT.</h2>
 </body>
 </html>
